# puzzles

./: .gitignore  README.md
cpp/: .gitignore  43_multiply_strings.cpp  CMakeLists.txt  README.md  build.sh  compile_commands.json  create_leetcode_problem.py  vector.cpp
cpp/bench/: CMakeLists.txt  cpu_cache_benchmark.cpp  csv_parser_benchmark.cpp
cpp/res/: csv_example_2.csv
cpp/src/: CMakeLists.txt
cpp/src/data_structures/: CMakeLists.txt  oa_hashmap.cpp  oa_hashmap.h  vector.cpp  vector.h
cpp/src/io/: CMakeLists.txt  csv_parser.h  tcp_direct.h
cpp/src/leetcode/: 116_populating_right_binary_tree.h  12_integer_to_roman.h  146_lru_cache.h  16_3sum_closest.h  25_reverse_k_nodes.h  31_next_permutation.h  32_longest_valid_parentheses.h  38_count_and_say.h  43_multiply_strings.cpp  43_multiply_strings.h  56_merge_intervals.h  89_gray_code.h  96_unique_binary_search_trees.h  97_interleaving_string.h  CMakeLists.txt  js_mock.h
cpp/src/util/: CMakeLists.txt  logger.h
cpp/test/data_structures/: CMakeLists.txt
cpp/test/io/: CMakeLists.txt  csv_parser_test.cpp
cpp/test/leetcode/: 12_integer_to_roman_test.cpp  38_count_and_say_test.cpp  97_interleaving_string.cpp  CMakeLists.txt  js_mock_test.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/data_structures/: vector_test.cpp
cpp/tests/io/: CMakeLists.txt  csv_parser_test.cpp  main.cpp
cpp/tests/io/res/: csv_example_1.csv
cpp/tests/leetcode/: 16_3sum_closest_test.cpp  43_multiply_strings_test.cpp  CMakeLists.txt  js_mock_test.cpp
csharp/: browser_history.cs
julia/: Manifest.toml  Project.toml
julia/src/: binary_trees.jl  binary_trees_3.jl  fibonacci.jl
python/leetcode/: 1_2sum.py  42_trapping_rain_water.py  43_multiply_strings.py  51_n_queens.py
python/src/io/: generate_csv.py
python/src/leetcode/: 1_two_sum.py  29_divide_two_integers.py  43_multiply_strings.py  51_n_queens.py
python/src/ml/: q_network.py  requirements.txt
rust/: .gitignore  Cargo.toml
rust/examples/: 116_populating_right_binary_tree.rs  116_populating_right_binary_tree_unsafe.rs  146_lru_cache.rs  2sum.rs  4sum.rs  combination_sum_2.rs  contains_duplicate.rs  letter_combinations_of_phone_number.rs  merge_k_sorted_lists.rs  swap_nodes_in_paris.rs  valid_anagram.rs
rust/examples/leetcode/: 4sum.rs  contains_duplicate.rs  find_the_count_of_good_integers.rs
rust/src/data_structures/: vector.rs
